# kimikopp

./: .travis.yml  CMakeLists.txt  README.md  build.sh  clean_workspace.sh  test.sh
include/kimiko/: arguments.h  command.h  context.h  kimiko.h  manager.h  parser.h
src/: context.cpp  kimiko.cpp
tests/: CMakeLists.txt  test.cpp
